--- a/Client/index.html
+++ b/Client/index.html
@@ -6,25 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Pizza Planet</title>
 </head>
 <body>
-    <h1>Pizza Planet Locations</h1>
-    <form class="create">
-        <input id="name" type="text" placeholder=" name"><br/>
-        Delivers: <input id="del" name="del" type="checkbox"><br/>
-        <input id="phone" type="tel" maxlength=10 placeholder=" phone"><br/>
-        <input id="line1" type="text" placeholder=" line 1"><br/>
-        <input id="line2" type="text" placeholder=" line 2"><br/>
-        <input id="city" type="text" placeholder=" city"><br/>
-        <select id="state" name="states">
-        <input id="zip" type="text" maxlength=5 placeholder=" zip"><br/>
-        <input id="submit" type="submit" placeholder="submit" disabled="disabled"><br/><br/>
+    <div class="container">
+        <h1>Pizza Planet Locations</h1>
+        <form class="create">
+            <input id="name" type="text" placeholder=" name"><br/>
+            Delivers: <input id="del" name="del" type="checkbox"><br/>
+            <input id="phone" type="tel" maxlength=10 placeholder=" phone"><br/>
+            <input id="line1" type="text" placeholder=" line 1"><br/>
+            <input id="line2" type="text" placeholder=" line 2"><br/>
+            <input id="city" type="text" placeholder=" city"><br/>
+            <select id="state" name="states">
+            <input id="zip" type="text" maxlength=5 placeholder=" zip"><br/>
+            <input id="submit" type="submit" placeholder="submit" disabled="disabled"><br/><br/>
 
-    </form>
-    <div class="locations">
-        
+        </form>
+        <div class="locations">
+
+        </div>
     </div>
 </body>
 </html>
